# interp-rt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
include/: interp-rt.h
lut-checker/: lutChecker.py  test-result.csv
lut-generator/: InterpRTGenerator.py  lut_generator.py  test.c  test.csv  test.h
src/: interp-rt.c  interp-rt.h
src/tester/: test.c  test.h  tester.cpp
